--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
       <version>1.7.2-0</version>
     </dependency>
     <dependency>
+      <groupId>org.kohsuke.stapler</groupId>
+      <artifactId>stapler-adjunct-underscore</artifactId>
+      <version>1.4.3-1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.4</version>
