--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>org.kohsuke.stapler</groupId>
       <artifactId>stapler-adjunct-underscore</artifactId>
-      <version>1.4.3-1-SNAPSHOT</version>
+      <version>1.4.3-1</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
