--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kohsuke.stapler</groupId>
   <artifactId>stapler-adjunct-backbone</artifactId>
-  <version>0.9.9-1</version>
+  <version>0.9.9-2-SNAPSHOT</version>
   <name>Backbone.js</name>
 
   <dependencies>
